--- a/src/app/components/flights/map/map.component.html
+++ b/src/app/components/flights/map/map.component.html
@@ -1,7 +1,28 @@
-<p>id: {{id}}</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eveniet nemo at est laborum consequuntur accusantium! Aut ducimus facilis quos expedita error, ratione hic? Reprehenderit nobis ut commodi blanditiis rerum.</p>
-<h2 class="display-3">{{airlinename}}</h2>
-<div class="container">
+
+  <h2 class="display-4 text-center">Flight Details</h2>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias, repellat?</p>
+
+  <div class="card mb-3" style="max-width: 540px;">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img class="img-thumbnail" src="https://media.istockphoto.com/photos/jerusalem-picture-id173240165?b=1&k=20&m=173240165&s=170667a&w=0&h=FXkPjbAZ9tHSv0UTgurQaAyi8tDsShde4mhlSCl98GA=" alt="jerusalem">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">{{destinationcountry}}</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde temporibus consequuntur, impedit veniam quia quae..</p>
+          <span class="card-text"><small class="text-muted">departure time: {{departuretime}}</small></span><br/>
+          <span class="card-text"><small class="text-muted">landing time: {{landingtime}}</small></span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+<div class="container mt-2">
+
   <agm-map
 [latitude]="lat"
 [longitude]="lng"
@@ -18,6 +39,8 @@
 </agm-map>
 
 
-</div>
+
+
+
 
 
