--- a/src/app/components/flights/map/map.component.html
+++ b/src/app/components/flights/map/map.component.html
@@ -1,5 +1,7 @@
 
-  <img class="myPlace" src="https://c.tenor.com/yZ7QWZvJ6-4AAAAj/party-travelling.gif" alt="">
+  <div class="myPlace">
+    <h5>Remaning tickets:, {{ remainingtickets}}</h5>
+  </div>
 
   <h2 class="display-4 text-center">Flight Details</h2>
   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias, repellat?</p>
