--- a/src/app/components/flights/map/map.component.scss
+++ b/src/app/components/flights/map/map.component.scss
@@ -17,9 +17,10 @@ agm-map{
 
 .myPlace{
   position: absolute;
-  top:15%;
-  right:10%;
-  opacity: 0.5;
+  top:25%;
+  right:25%;
+  color:#0d6efd;
+  box-shadow: 5px 5px 10px;
 }
 
 
