--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -67,7 +67,7 @@
         </div>
         <!--Fourth Row-->
         <div class="row mt-4">
-            <div class="col-sm-6"> <select class="browser-default custom-select mb-4" id="select" name="departureTime" #departuretimeF="ngModel"
+            <div class="col-sm-6"> <select class="browser-default custom-select mb-4" id="select" name="departuretime" #departuretimeF="ngModel"
               ngModel>
                     <option value="" disabled="" selected="">Anytime</option>
                     <option value="1">6:00 AM</option>
